--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 
    <body>
       <div class="container">
-        <h2>Request Header Parser Microservice</h2>
+        <h2>Request Header Parser Microservice Project</h2>
 
         <h3>Example Usage:</h3>
         <p>
@@ -27,6 +27,7 @@
         <p>
           by <a href="https://www.freecodecamp.org">freeCodeCamp</a>
         </p>
+        <p>Completed Challenge for <a href="https://github.com/j0t4ku" target="_blank" rel="noopener noreferrer">Joel Florentin - J0T4KU</a></p>
       </div>
    </body>
 
